--- a/index.html
+++ b/index.html
@@ -44,12 +44,13 @@
       </ul>
     </div>
 
-
   </main>
   <div class="t-contents">
     <div class="t-item">
-      <img src="https://www.pakutaso.com/shared/img/thumb/OOKIMGL0679_TP_V.jpg" alt="胸筋">
-      <a href="file:///Users/dantemujica/Desktop/web-site/second.asp">胸筋</a>
+      <a href="file:///Users/dantemujica/Desktop/web-site/second.asp">
+        <img src="file:///Users/rainiero/program/dante/training/images/dante.png" alt="胸筋">
+      </a>
+      <span>胸筋</span>
     </div>
 
     <div class="t-item">
