--- a/index.html
+++ b/index.html
@@ -23,10 +23,9 @@
       <li><a href="https://www.instagram.com/mujica8208">Instagram</a></li>
     </menu>
   </header>
-
   <main>
     <p class="main-text">初心者必見！自宅で簡単に出来る筋トレを紹介します。気になる部位を選んでトレーニングして行きましょう！</p>
-    <img src="https://www.pakutaso.com/shared/img/thumb/BO15103014151030145122_TP_V.jpg" alt="管理人筋トレ">
+    <img src="/Users/dantemujica/Desktop/web-site/images/okinawa.jpeg" alt="管理人筋トレ">
     <div class="maeoki">
       <p>皆さん初めまして(^^)管理人のALEXISです。</p>
       <p>このページを見てくれてるという事は最近お腹周りが気になるからではないでしょうか？</p>
@@ -36,107 +35,78 @@
     <h2>メニュー</h2>
     <div class="mokuji">
       <ul>
-        <li><a href="#404050">筋トレのメリットとは？</a></li>
-        <li><a href="#404051">基礎代謝をあげよう！</a></li>
-        <li><a href="#404052">食事を見直そう！</a></li>
-        <li><a href="#404053">効果がでるまでどれぐらいかかる？</a></li>
-        <li><a href="#404054">継続は力なり！</a></li>
+        <li><a href="#merit">筋トレのメリットとは？</a></li>
+        <li><a href="#kisotaisha">基礎代謝をあげよう！</a></li>
+        <li><a href="#shokuji">食事を見直そう！</a></li>
+        <li><a href="#kouka">効果がでるまでどれぐらいかかる？</a></li>
+        <li><a href="#keizoku">継続は力なり！</a></li>
       </ul>
     </div>
-
-
-  </main>
-  <div class="t-contents">
-    <div class="t-item">
-      <img src="https://www.pakutaso.com/shared/img/thumb/OOKIMGL0679_TP_V.jpg" alt="胸筋">
-      <a href="file:///Users/dantemujica/Desktop/web-site/second.asp">胸筋</a>
+    <div class="t-contents">
+      <div class="t-item">
+        <a href="file:///Users/dantemujica/Desktop/web-site/kyoukin.html"><img src="/Users/dantemujica/Desktop/web-site/images/OOKIMGL0679_TP_V.jpeg" alt="胸筋"></a>
+        <span>胸筋</span>
+      </div>
+      <div class="t-item">
+        <a href="file:///Users/dantemujica/Desktop/web-site/kahanshin.html"><img src="/Users/dantemujica/Desktop/web-site/images/PAKU6479_TP_V.jpeg" alt="下半身"></a>
+        <span>下半身</span>
+      </div>
+      <div class="t-item">
+        <a href="file:///Users/dantemujica/Desktop/web-site/haikin.html"><img src="/Users/dantemujica/Desktop/web-site/images/OOPAKU6485_TP_V.jpeg" alt="背中"></a>
+        <span>背中</span>
+      </div>
+      <div class="t-item">
+        <a href="file:///Users/dantemujica/Desktop/web-site/fukkin.html"><img src="/Users/dantemujica/Desktop/web-site/images/PAKU6283_TP_V.jpeg" alt="腹筋"></a>
+        <span>腹筋</span>
+      </div>
     </div>
-
-    <div class="t-item">
-      <img src="https://www.pakutaso.com/shared/img/thumb/PAKU6479_TP_V.jpg" alt="下半身">
-      <a href="file:///Users/dantemujica/Desktop/web-site/third.asp">下半身</a>
-    </div>
-
-    <div class="t-item">
-      <img src="https://www.pakutaso.com/shared/img/thumb/OOPAKU6485_TP_V.jpg" alt="背中">
-      <a href="">背中</a>
-    </div>
-
-    <div class="t-item">
-      <img src="https://www.pakutaso.com/shared/img/thumb/BO151030535008_TP_V.jpg" alt="腹筋周り">
-      <a href="">腹筋周り</a>
-    </div>
-
-  </div>
-
-
-  </div>
-
-
-
-  <a id="404050">
-    <h2>筋トレのメリットとは？</h2>
-  </a>
-  <p>
+    <h2 id="merit">筋トレのメリットとは？</h2>
+      <p>
     忍耐力とは耐え忍ぶと書きますが、まさに筋トレはまさに体への負荷に耐え忍ぶ行動です。体への負荷を少しずつ増やしながら自分の体と対話し、できることを増やします。負荷が強くなるに従ってきつく辛いのですが、弱気になりそうな自分に打ち勝ちながらトレーニングに取り組むことで忍耐力がつきます。
-  </p>
-  <p>
-    自分の体を鏡で見て、肩と腕を鍛える必要があると感じたら、それらを鍛えるメニューと日程を決めます。自分で決めたメニューをこなし、週に一度鏡の前に立ちどのくらいたくましくなったかチェックします。そのメニューが楽にできるようになれば、種目、回数、セット数を増やします。
+      </p>
+      <p>
+      自分の体を鏡で見て、肩と腕を鍛える必要があると感じたら、それらを鍛えるメニューと日程を決めます。自分で決めたメニューをこなし、週に一度鏡の前に立ちどのくらいたくましくなったかチェックします。そのメニューが楽にできるようになれば、種目、回数、セット数を増やします。
 
-    また成果が出てきたり、思ったより違う成果が出てくればメニューを組み直したりして工夫をします。このような行動を繰り返すうちに計画する力が自然とついてきます。</p>
-  <p>これ以外にも書ききれないぐらいメリットがありますので一緒に頑張っていきましょう！</p>
-
-  <a id="404051">
-    <h2>基礎代謝を上げよう</h2>
-  </a>
-  <p>やせやすい体づくりのために知っておきたい「代謝」の基本的な知識をご紹介します</p>
-  <p>私たちの体内では、<span>活動代謝,食事誘発性熱産生,基礎代謝</span>という3種類の代謝が行われています! </p>
-  <p>基礎代謝の上げ方はたくさんありますが、筋トレをする事で普段使われていない筋肉が動き、脂肪を燃焼してくれるため基礎代謝があがります。継続すると痩せていくだけではなく、太りにくい体を手に入れることもできます！</p>
-
-  <a id="404052">
-    <h2>食事を見直そう！</h2>
+      また成果が出てきたり、思ったより違う成果が出てくればメニューを組み直したりして工夫をします。このような行動を繰り返すうちに計画する力が自然とついてきます。</p>
+      <p>これ以外にも書ききれないぐらいメリットがありますので一緒に頑張っていきましょう！</p>
+    <h2 id="kisotaisha">基礎代謝を上げよう</h2>
+    <p>やせやすい体づくりのために知っておきたい「代謝」の基本的な知識をご紹介します</p>
+    <p>私たちの体内では、<span>活動代謝,食事誘発性熱産生,基礎代謝</span>という3種類の代謝が行われています! </p>
+    <p>基礎代謝の上げ方はたくさんありますが、筋トレをする事で普段使われていない筋肉が動き、脂肪を燃焼してくれるため基礎代謝があがります。継続すると痩せていくだけではなく、太りにくい体を手に入れることもできます！</p>
+    <h2 id="shokuji">食事を見直そう！</h2>
     <p>朝食は食べない、コーヒーのみという方もいるかもしれませんが、朝食はぜひ積極的に食べましょう。睡眠時間中に何も口にしていなかった体は、水分や栄養分が枯渇してしまっている状態だからです。
 
       特に意識して摂取したいのは筋肉を作り上げる栄養素であるタンパク質です。
     </p>
     <p>また、バナナ・おにぎり・シリアルなどで手軽に朝食を摂るのもおすすめですが、タンパク質が不足しがちです。
       その場合は、プロテインを加えれば手軽にタンパク質を補え、栄養バランスを整えることができます。
-      オススメなのは、コスパ、味、共に最強の<samp class="proteina"><a
-          href="https://www.myprotein.jp/nutrition/protein.list">プロテイン</a></samp>です！筋トレしていなくても現代人の食事ではタンパク質が不足していると言われています。食事に合わせて＋aで摂取していくようにしましょう！
+      オススメなのは、コスパ、味、共に最強の<span class="proteina"><a
+          href="https://www.myprotein.jp/nutrition/protein.list">プロテイン</a></span>です！筋トレしていなくても現代人の食事ではタンパク質が不足していると言われています。食事に合わせて＋aで摂取していくようにしましょう！
     </p>
-  </a>
-
-  <a id="404053">
-    <h2>効果が出るまでどれぐらいかかる？</h2>
-  </a>
-  <p>筋トレを始めて効果が実感できるようになるまでには、どれくらいの時間が掛かるのでしょうか？
+    <h2 id="kouka">効果が出るまでどれぐらいかかる？</h2>
+    <p>筋トレを始めて効果が実感できるようになるまでには、どれくらいの時間が掛かるのでしょうか？
     せっかく筋トレをしても、効果がなかなか出てこないと嫌になってしまいますよね。
     実は、筋トレで理想の身体を手に入れるためには、最低3ヶ月の時間が必要になります。
     そのため、焦らずにじっくり筋トレを続けていくことが、理想の肉体を手に入れるためのコツなのです。</p>
-  <p>３ヶ月は長いと始める前に思う人がほとんどですが、３ヶ月まえにあなたはなにをしていましたか？
+    <p>３ヶ月は長いと始める前に思う人がほとんどですが、３ヶ月まえにあなたはなにをしていましたか？
     もし筋トレを初めていれば今頃変化を楽しめたはずです！笑
     三ヶ月後には変化を楽しめるよう、今から一緒に頑張っていきましょう！
-  </p>
-
-  <a id="404054">
-    <h2>継続は力なり！</h2>
+    </p>
+    <h2 id="keizoku">継続は力なり！</h2>
     <p>これから筋トレをしていく皆さんにアドバイスをしてきましたが「筋トレを何回も挫折してる！」という人もいると思います。僕もそんな一人でした。笑</p>
     <p>ですがやはりカッコいい身体を手に入れるには継続していく以外に近道はありません。先程も言いましたが効果を実感するためには３ヶ月が必要です。</p>
     <p>最初からストイックになる必要はありません。少しづつで大丈夫です(^^)
       めんどくさいな〜と思う日は腕立て１０回でも構いません！とにかくやる！と決めたらやっていきましょう！(^^)
     </p>
-  </a>
-
-  <footer>
-    <div class="footer-title">EnLaCasa</div>
-
-  </footer>
-
-
-
-
-
   </main>
+  <footer>
+    <menu class="footer-list">
+      <li><a href="https://www.myprotein.jp/nutrition.list">サプリメント</a></li>
+      <li><a href="https://www.myprotein.jp/nutrition/protein.list">プロテイン</a></li>
+      <li><a href="https://www.youtube.com/channel/UCwbuojHcPqeCO9OnGOBEHyw?view_as=subscriber">youtube</a></li>
+      <li><a href="https://www.instagram.com/mujica8208">Instagram</a></li>
+    </menu>
+  </footer>
 </body>
 
 </html>
