インデント修正

--- a/haikin.html
+++ b/haikin.html
@@ -1,25 +1,39 @@
 <!DOCTYPE html>
-<html lang="jp">
+<html lang="ja">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>EnLaCasa</title>
+  <title>haikin</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
     <div class="header-title">EnLaCasa</div>
-    <h1>姿勢を正す背筋のトレーニング</h1>
   </header>
   <main>
+    <h1>姿勢を正す背筋のトレーニング</h1>
     <h2>デクラインプッシュアップ</h2>
-    <p>筋トレマニアで知られるGacktさんが生み出した新たな形の腕立て伏せトレーニング。デクラインプッシュアップとワイドプッシュアップを合体させた筋トレメニューで、筋トレ初心者でも始めやすい種目になります。自宅で用意した椅子でOKなため、家トレに最適です！やり方は動画でしっかり確認しましょう！</p>
+    <p>筋トレマニアで知られるGacktさんが生み出した新たな形の腕立て伏せトレーニング。
+      デクラインプッシュアップとワイドプッシュアップを合体させた筋トレメニューで
+      筋トレ初心者でも始めやすい種目になります。自宅で用意した椅子でOKなため
+      家トレに最適です！やり方は動画でしっかり確認しましょう！</p>
     <h2>フロントブリッジ</h2>
-    <p>大胸筋や腹筋などのインナーマッスルも一緒に鍛えられる体幹トレーニング、フロントブリッジ。自宅で出来るプランク種目はオーソドックスな筋トレメニューとして人気を集めており、筋トレマニアの多くも取り入れている種目です。見た目よりもだいぶハードな種目ですので無理しず、タイマーセットしてやっていきましょう(^^)</p>
+    <p>大胸筋や腹筋などのインナーマッスルも一緒に鍛えられる体幹トレーニング
+      フロントブリッジ。自宅で出来るプランク種目はオーソドックスな筋トレメニューとして
+      人気を集めており、筋トレマニアの多くも取り入れている種目です。
+      見た目よりもだいぶハードな種目ですので無理しず
+      タイマーセットしてやっていきましょう(^^)</p>
     <h2>ハイリバースプランク</h2>
-    <p>うつ伏せになった行うプランクトレーニングとは違い、仰向けになったまま取り組める筋トレメニュー。プランクよりも効果的に背筋部分を刺激できる種目ですので、筋トレ初心者はまずハイリバースプランクから始めてみると良いでしょう。フロントブリッジがキツイ方はこれから始める事をオススメします(^^)</p>
+    <p>うつ伏せになった行うプランクトレーニングとは違い
+      仰向けになったまま取り組める筋トレメニュー。
+      プランクよりも効果的に背筋部分を刺激できる種目ですので
+      筋トレ初心者はまずハイリバースプランクから始めてみると良いでしょう。
+      フロントブリッジがキツイ方はこれから始める事をオススメします(^^)</p>
     <h2>フロントラットプルダウン（動きだけ）</h2>
-    <p>ラットプルダウンと聞くとジムで行うトレーニングを思い浮かべますが、マシンを使わずとも動きだけで筋肉を刺激できます。そんな自宅版ラットプルダウンの正しいやり方について動画で解説していきます。負担を増やすために２Ｌの水の入ったペットボトルを用意してください(^^)</p>
+    <p>ラットプルダウンと聞くとジムで行うトレーニングを思い浮かべますが
+      マシンを使わずとも動きだけで筋肉を刺激できます。
+      そんな自宅版ラットプルダウンの正しいやり方について動画で解説していきます。
+      負担を増やすために２Ｌの水の入ったペットボトルを用意してください(^^)</p>
   </main>
   <footer>
     <div class="footer-title">EnLaCasa</div>
