--- a/kahanshin.html
+++ b/kahanshin.html
@@ -1,27 +1,40 @@
 <!DOCTYPE html>
-<html lang="jp">
+<html lang="ja">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>EnLaCasa</title>
+  <title>kahanshin</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <header>
     <div class="header-title">EnLaCasa</div>
-    <h1>もっとも基礎代謝を高める下半身のトレーニングになります。</h1>
   </header>
   <main>
+    <h1>もっとも基礎代謝を高める下半身のトレーニングになります。</h1>
     <h2>スクワット</h2>
-    <p>スクワットはウエイトトレーニングの基本的な種目でBIG3の1つです。直立した状態から膝関節の屈曲・伸展を繰り返す運動で、下半身、特に大腿四頭筋・下腿三頭筋・大臀筋・中臀筋などの筋力アップ、筋肥大に大きな効果を持ちます。初心者に一番オススメのトレーンングのひとつです。基礎代謝も上がりますが、これもフォームが大切ですので動画でやり方を見ていきましょう(^^)</p>
+    <p>スクワットはウエイトトレーニングの基本的な種目でBIG3の1つです。
+      直立した状態から膝関節の屈曲・伸展を繰り返す運動で、下半身、特に大腿四頭筋
+      下腿三頭筋・大臀筋・中臀筋などの筋力アップ、筋肥大に大きな効果を持ちます。
+      初心者に一番オススメのトレーンングのひとつです。基礎代謝も上がりますが
+      これもフォームが大切ですので動画でやり方を見ていきましょう(^^)</p>
     <h2>ブルガリアンスクワット</h2>
-    <p>ベンチや椅子などに後ろ向きで立ち、片足の先を乗せて行います。自宅にある椅子やソファーを使ってやるトレーニングになります。スクワットよりもえらいので初心者は回数よりもフォームを意識してやっていきましょう(^^)</p>
+    <p>ベンチや椅子などに後ろ向きで立ち、片足の先を乗せて行います。
+      自宅にある椅子やソファーを使ってやるトレーニングになります。
+      スクワットよりもえらいので初心者は回数よりも
+      フォームを意識してやっていきましょう(^^)</p>
     <h2>ジャンプスクワット</h2>
-    <p>注意すべきポイントは、常に踵（かかと）を上げた状態を維持すること。女性は身体が軟らかいので、しゃがんだ際に踵が地面についてしまいがちですが、そうすると腰を痛める原因にもつながります。最後の追い込みににオススメです！ジャンプでフォームが乱れる可能性があり、腰を痛める事もありますので女性の方は特に注意して行うようにしましょう(^^)</p>
+    <p>注意すべきポイントは、常に踵（かかと）を上げた状態を維持すること。
+      女性は身体が軟らかいので、しゃがんだ際に踵が地面についてしまいがちですが
+      そうすると腰を痛める原因にもつながります。最後の追い込みににオススメです！
+      ジャンプでフォームが乱れる可能性があり、腰を痛める事もありますので
+      女性の方は特に注意して行うようにしましょう(^^)</p>
     <h2>ワイドスタンススクワット</h2>
-    <p>普通のスクワットよりも足幅を広げたスクワットです。スクワットはいろんな種類がありますが、足の位置で効き方がだいぶ変わる種目です。腰を痛めないよう、自分にあった足幅でスクワットを行いましょう！こちらの動画では、足幅を変えたときに注意すべきところを上げていますのでよかったら参考にしてください(^^)
-    </p>
+    <p>普通のスクワットよりも足幅を広げたスクワットです。
+      スクワットはいろんな種類がありますが、足の位置で効き方がだいぶ変わる種目です。
+      腰を痛めないよう、自分にあった足幅でスクワットを行いましょう！こちらの動画では
+      足幅を変えたときに注意すべきところを上げていますのでよかったら参考にしてください。</p>
   </main>
   <footer>
     <div class="footer-title">EnLaCasa</div>
