--- a/kyoukin.html
+++ b/kyoukin.html
@@ -14,33 +14,45 @@
   </header>
   <main>
     <h1>自重でできる胸筋のトレーニングです。</h1>
-    <h2>腕立て伏せ</h2>
-    <p>腕立て伏せを行う際は、回数よりも正しいフォームを意識して取り組みましょう。
+    <div>
+      <img src="" alt="">
+      <h2>腕立て伏せ</h2>
+      <p>腕立て伏せを行う際は、回数よりも正しいフォームを意識して取り組みましょう。
       100回間違ったフォームで行うよりも1回正しいフォームで行った方が効果的であると言われる
       ほど、腕立て伏せはフォームが“命”です。
       動画で正しいフォームと回数を確認していきましょう。
       腕立てが１０回もできない！という方のためにも動画で初心者向けの腕立ての
       やり方を紹介していますので一緒に確認して自分にあった方で
       トレーニングを開始してくださいね(^^)</p>
-    <h2>ワイドプッシュアップ</h2>
-    <p>たくましい男の象徴とされている大胸筋。分厚く盛り上がった大胸筋は
+    </div>
+    <div>
+      <img src="" alt="">
+      <h2>ワイドプッシュアップ</h2>
+      <p>たくましい男の象徴とされている大胸筋。分厚く盛り上がった大胸筋は
       男らしさを何倍にも引き立ててくれます。胸筋を鍛えることで、知られている腕立て伏せ。
       その効果を最大化させるのがこのワイド・プッシュアップです。
       大胸筋に対してダイレクトに高負荷をかけられるため、
       より効果的に男らしいボディに近付けます。
       普通の腕立てでは負荷が足りないという人へオススメです(^^)</p>
-    <h2>ナロープッシュアップ</h2>
-    <p>男なら一度は、「腕を太くしたい！」と思ったことがあるはず。ナロープッシュアップは上腕三頭筋に高負荷をかけられる腕を太くする筋トレメニューです。腕全体をたくましく太くしたい方におすすめのトレーニングになります。
+    </div>
+    <div>
+      <img src="" alt="">
+      <h2>ナロープッシュアップ</h2>
+      <p>男なら一度は、「腕を太くしたい！」と思ったことがあるはず。ナロープッシュアップは上腕三頭筋に高負荷をかけられる腕を太くする筋トレメニューです。腕全体をたくましく太くしたい方におすすめのトレーニングになります。
       腕立てでは胸筋と一緒に腕も鍛えることができます。
       普通の腕立てでも気づかない間に腕が鍛えられていますが、
       ナロープッシュアップでは腕に対する負荷を上げてトレーニングします。
       動画でやり方を確認しましょう(^^)</p>
-    <h2>ヒンズープッシュアップ</h2>
-    <p>腕立て伏せで腹筋も鍛えられるって知っていましたか？少し特殊な動きをすることで
+    </div>
+    <div>
+      <img src="" alt="">
+      <h2>ヒンズープッシュアップ</h2>
+      <p>腕立て伏せで腹筋も鍛えられるって知っていましたか？少し特殊な動きをすることで
       腕立て伏せの負荷を最大限に引き上げられるヒンズー・プッシュアップ。
       動きが付く分腹筋へも負荷が掛かるため、腹筋も同時に鍛えられます。
       腹筋も同時に鍛えられるのは嬉しいですよね！</p>
-    <p>鍛えたい部分を意識することが大切ですので動画でしっかり確認しましょ(^^)</p>
+      <p>鍛えたい部分を意識することが大切ですので動画でしっかり確認しましょ(^^)</p>
+    </div>
   </main>
   <footer>
     <div class="footer-title">EnLaCasa</div>
