ｐｃ用レイアウト完成

--- a/fukkin.html
+++ b/fukkin.html
@@ -12,30 +12,50 @@
   </header>
   <main>
     <h1>腹筋周りに脂肪をためない！ためのトレーニング</h1>
-    <h2>プランク</h2>
-    <p>体幹を鍛え、腹筋のみならず二の腕や背中、
-      お尻の筋肉まで鍛えることができる万能トレーニングです。
-      複雑な動きもなく、道具もいらず、静かに行えるため自宅トレーニングには最適ですよね。
-      1.両肘を床につけ、うつ伏せになります。足は腰幅程度に開き、腰を浮かせます。
-      2.その姿勢のままキープします。
-      これだけで全身がプルプルですよ(^^)</p>
-    <h2>逆立ち</h2>
-    <p>シックスパックを作るには、意外に「逆立ち」もおすすめです。
-      実際に行ってみると、腕と肩の筋肉以上に腹筋を使うことが実感できるでしょう。
-      まずは壁を使った逆立ちのやり方からマスターしていきましょう。
-      壁を使っても始めたばかりの時はだいぶえらいので怪我しないように気をつけてください！</p>
-    <h2>ヨガ</h2>
-    <p>先ほど紹介したプランクは肘を床について行う「ロープランク」でしたが
-      ここでは肘を伸ばした「ハイプランク」、ヨガでいう「板のポーズ」
-      と呼ばれる体勢を作ります。筋トレとヨガは別物だと考える人もいると思いますが
-      僕の考えでは外見も内見も大切だと思います。そのため、内側からもきれいになる！
-      という意味も込めてヨガをオススメします。
-      なので一つの種目として入れていただきたいです(^^)</p>
-    <h2>バイシクルクランチ</h2>
-    <p>引き締まった横腹のクビレを作るなら、バイシンクルクランチが一番効果的です。
-      腹直筋と腹斜筋を交互に鍛えられるので、短期間で腹筋を割ることができます。
-      正しいフォームとコツをしっかりと学んで、最速で綺麗な腹筋に仕上げていきましょう。
-      男女共にオススメします(^^)</p>
+    <div class="training">
+      <img src="https://www.pakutaso.com/shared/img/thumb/161007-227_TP_V.jpg" alt="">
+      <div class="text">
+        <h2>プランク</h2>
+        <p>体幹を鍛え、腹筋のみならず二の腕や背中、
+        お尻の筋肉まで鍛えることができる万能トレーニングです。
+        複雑な動きもなく、道具もいらず、静かに行えるため自宅トレーニングには最適ですよね。
+        1.両肘を床につけ、うつ伏せになります。足は腰幅程度に開き、腰を浮かせます。
+        2.その姿勢のままキープします。
+        これだけで全身がプルプルですよ(^^)</p>
+      </div>
+    </div>
+    <div class="training">
+      <img class="rigth" src="https://www.pakutaso.com/shared/img/thumb/161007-227_TP_V.jpg" alt="">
+      <div class="text-r">
+        <h2>逆立ち</h2>
+        <p>シックスパックを作るには、意外に「逆立ち」もおすすめです。
+        実際に行ってみると、腕と肩の筋肉以上に腹筋を使うことが実感できるでしょう。
+        まずは壁を使った逆立ちのやり方からマスターしていきましょう。
+        壁を使っても始めたばかりの時はだいぶえらいので怪我しないように気をつけてください！</p>
+      </div>
+    </div>
+    <div class="training">
+      <img src="https://www.pakutaso.com/shared/img/thumb/161007-227_TP_V.jpg" alt="">
+      <div class="text">
+        <h2>ヨガ</h2>
+        <p>先ほど紹介したプランクは肘を床について行う「ロープランク」でしたが
+        ここでは肘を伸ばした「ハイプランク」、ヨガでいう「板のポーズ」
+        と呼ばれる体勢を作ります。筋トレとヨガは別物だと考える人もいると思いますが
+        僕の考えでは外見も内見も大切だと思います。そのため、内側からもきれいになる！
+        という意味も込めてヨガをオススメします。
+        なので一つの種目として入れていただきたいです(^^)</p>
+      </div>
+    </div>
+    <div class="training">
+      <img class="rigth" src="https://www.pakutaso.com/shared/img/thumb/161007-227_TP_V.jpg" alt="">
+      <div class="text-r">
+        <h2>バイシクルクランチ</h2>
+        <p>引き締まった横腹のクビレを作るなら、バイシンクルクランチが一番効果的です。
+        腹直筋と腹斜筋を交互に鍛えられるので、短期間で腹筋を割ることができます。
+        正しいフォームとコツをしっかりと学んで、最速で綺麗な腹筋に仕上げていきましょう。
+        男女共にオススメします(^^)</p>
+      </div>
+    </div>
   </main>
   <footer>
     <div class="footer-title">EnLaCasa</div>
