--- a/index.html
+++ b/index.html
@@ -49,19 +49,19 @@
     <div class="t-contents">
       <div class="t-item">
         <a href="file:///Users/dantemujica/Desktop/web-site/kyoukin.html"><img src="/Users/dantemujica/Desktop/web-site/images/OOKIMGL0679_TP_V.jpeg" alt="胸筋"></a>
-        <span class="text">胸筋</span>
+        <span class="dai">胸筋</span>
       </div>
       <div class="t-item">
         <a href="file:///Users/dantemujica/Desktop/web-site/kahanshin.html"><img src="/Users/dantemujica/Desktop/web-site/images/PAKU6479_TP_V.jpeg" alt="下半身"></a>
-        <span class="text">下半身</span>
+        <span class="dai">下半身</span>
       </div>
       <div class="t-item">
         <a href="file:///Users/dantemujica/Desktop/web-site/haikin.html"><img src="/Users/dantemujica/Desktop/web-site/images/OOPAKU6485_TP_V.jpeg" alt="背中"></a>
-        <span class="text">背中</span>
+        <span class="dai">背中</span>
       </div>
       <div class="t-item">
         <a href="file:///Users/dantemujica/Desktop/web-site/fukkin.html"><img src="/Users/dantemujica/Desktop/web-site/images/PAKU6283_TP_V.jpeg" alt="腹筋"></a>
-        <span class="text">腹筋</span>
+        <span class="dai">腹筋</span>
       </div>
     </div>
     <div class="honbun">
