--- a/kyoukin.html
+++ b/kyoukin.html
@@ -29,7 +29,7 @@
     </div>
     <div class="training">
       <img class="rigth" src="https://www.pakutaso.com/shared/img/thumb/161007-219_TP_V.jpg" alt="ワイドプッシュアップ">
-      <div class="text-l">
+      <div class="text-r">
         <h2>ワイドプッシュアップ</h2>
         <p>たくましい男の象徴とされている大胸筋。分厚く盛り上がった大胸筋は
         男らしさを何倍にも引き立ててくれます。胸筋を鍛えることで、知られている腕立て伏せ。
@@ -53,7 +53,7 @@
     </div>
     <div class="training">
       <img class="rigth" src="https://www.pakutaso.com/shared/img/thumb/OOK160214240I9A8057_TP_V.jpg" alt="ヒンズープッシュアップ">
-      <div class="text-l">
+      <div class="text-r">
         <h2>ヒンズープッシュアップ</h2>
         <p>腕立て伏せで腹筋も鍛えられるって知っていましたか？少し特殊な動きをすることで
         腕立て伏せの負荷を最大限に引き上げられるヒンズー・プッシュアップ。
