スマホ用メディアクエリ更新

--- a/index.html
+++ b/index.html
@@ -7,18 +7,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>EnLaCasa</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="resposive.css">
+  <meta name="viewport"
+  content="width=device-width,initial-scale=1.0">
 </head>
 
 <body>
   <header>
     <!-- サイトタイトルはh1以外を使う -->
-    <div class="header-title">En La Casa</div>
+    <div class="header-title"　class="top">En La Casa</div>
     <!-- h1~h6 は順番に使うべき、大きさ見た目を変えたい場合はclassを使って変える -->
     <!-- 一番伝えたい見出しをh1にする -->
     <h1 class="sub-title">【初心者向け】自宅で楽しく筋トレしましょう！</h1>
     <menu class="header-list">
-      <li><a href="https://www.myprotein.jp/nutrition.list">サプリメント</a></li>
-      <li><a href="https://www.myprotein.jp/nutrition/protein.list">プロテイン</a></li>
+      <li><a href="https://www.myprotein.jp/nutrition.list">Supplement</a></li>
+      <li><a href="https://www.myprotein.jp/nutrition/protein.list">protein</a></li>
       <li><a href="https://www.youtube.com/channel/UCwbuojHcPqeCO9OnGOBEHyw?view_as=subscriber">youtube</a></li>
       <li><a href="https://www.instagram.com/mujica8208">Instagram</a></li>
     </menu>
@@ -122,9 +125,10 @@
     </div>
   </main>
   <footer>
-    <menu class="footer-list">
-      <li><a href="https://www.myprotein.jp/nutrition.list">サプリメント</a></li>
-      <li><a href="https://www.myprotein.jp/nutrition/protein.list">プロテイン</a></li>
+    <a class="top-idou" href="#top">TOPへ戻る</a>
+    <menu class="footer-list menu-icon">
+      <li><a href="https://www.myprotein.jp/nutrition.list">Supplement</a></li>
+      <li><a href="https://www.myprotein.jp/nutrition/protein.list">protein</a></li>
       <li><a href="https://www.youtube.com/channel/UCwbuojHcPqeCO9OnGOBEHyw?view_as=subscriber">youtube</a></li>
       <li><a href="https://www.instagram.com/mujica8208">Instagram</a></li>
     </menu>
