--- a/index.html
+++ b/index.html
@@ -126,12 +126,27 @@
   </main>
   <footer>
     <a class="top-idou" href="#top">TOPへ戻る</a>
-    <menu class="footer-list menu-icon">
+    <menu class="footer-list">
       <li><a href="https://www.myprotein.jp/nutrition.list">Supplement</a></li>
       <li><a href="https://www.myprotein.jp/nutrition/protein.list">protein</a></li>
       <li><a href="https://www.youtube.com/channel/UCwbuojHcPqeCO9OnGOBEHyw?view_as=subscriber">youtube</a></li>
       <li><a href="https://www.instagram.com/mujica8208">Instagram</a></li>
     </menu>
+    <div class="ham" id="ham">
+      <span class="ham_line ham_line1"></span>
+      <span class="ham_line ham_line2"></span>
+      <span class="ham_line ham_line3"></span>
+    </div>
+    <div class="menu_wrapper" id="menu_wrapper">
+      <div class="menu">
+        <ul>
+          <li><a href="https://www.myprotein.jp/nutrition.list" style="color: #FFF;">Supplement</a></li>
+          <li><a href="https://www.myprotein.jp/nutrition/protein.list" style="color: #fff;">protein</a></li>
+          <li><a href="https://www.youtube.com/channel/UCwbuojHcPqeCO9OnGOBEHyw?view_as=subscriber" style="color: #FFF;">youtube</a></li>
+          <li><a href="https://www.instagram.com/mujica8208" style="color: #FFF;">Instagram</a></li>
+        </ul>
+      </div>
+    </div>
   </footer>
 </body>
 
