--- a/haikin.html
+++ b/haikin.html
@@ -61,10 +61,10 @@
   <footer>
     <div class="footer-title">EnLaCasa</div>
     <menu class="footer-list2">
-      <li><a href="file:///Users/dantemujica/Desktop/web-site/kyoukin.html">胸筋</a></li>
-      <li><a href="file:///Users/dantemujica/Desktop/web-site/kahanshin.html">下半身</a></li>
-      <li><a href="file:///Users/dantemujica/Desktop/web-site/haikin.html">背筋</a></li>
-      <li><a href="file:///Users/dantemujica/Desktop/web-site/fukkin.html">腹筋</a></li>
+      <li><a href="kyoukin.html">胸筋</a></li>
+      <li><a href="kahanshin.html">下半身</a></li>
+      <li><a href="haikin.html">背筋</a></li>
+      <li><a href="fukkin.html">腹筋</a></li>
       <li><a href="https://www.instagram.com/mujica8208">Instagram</a></li>
       <li><a href="https://www.youtube.com/channel/UCwbuojHcPqeCO9OnGOBEHyw?view_as=subscriber">YouTube</a></li>
     </menu>
