--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <main>
     <p class="main-text">初心者必見！自宅で簡単に出来る筋トレを紹介します。気になる部位を選んでトレーニングして行きましょう！</p>
     <div class="shoukaibun">
-      <img src="/Users/dantemujica/Desktop/web-site/images/okinawa.jpeg" alt="管理人">
+      <img src="images/okinawa.jpeg" alt="管理人">
       <div class="maeoki">
         <p>皆さん初めまして(^^)管理人のALEXISです。</p>
         <p>このページを見てくれてるほとんどの人は
@@ -51,19 +51,19 @@
     </div>
     <div class="t-contents">
       <div class="t-item">
-        <a href="file:///Users/dantemujica/Desktop/web-site/kyoukin.html"><img src="/Users/dantemujica/Desktop/web-site/images/OOKIMGL0679_TP_V.jpeg" alt="胸筋"></a>
+        <a href="kyoukin.html"><img src="images/OOKIMGL0679_TP_V.jpeg" alt="胸筋"></a>
         <span class="dai">胸筋</span>
       </div>
       <div class="t-item">
-        <a href="file:///Users/dantemujica/Desktop/web-site/kahanshin.html"><img src="/Users/dantemujica/Desktop/web-site/images/PAKU6479_TP_V.jpeg" alt="下半身"></a>
+        <a href="kahanshin.html"><img src="images/PAKU6479_TP_V.jpeg" alt="下半身"></a>
         <span class="dai">下半身</span>
       </div>
       <div class="t-item">
-        <a href="file:///Users/dantemujica/Desktop/web-site/haikin.html"><img src="/Users/dantemujica/Desktop/web-site/images/OOPAKU6485_TP_V.jpeg" alt="背中"></a>
+        <a href="haikin.html"><img src="images/OOPAKU6485_TP_V.jpeg" alt="背中"></a>
         <span class="dai">背中</span>
       </div>
       <div class="t-item">
-        <a href="file:///Users/dantemujica/Desktop/web-site/fukkin.html"><img src="/Users/dantemujica/Desktop/web-site/images/PAKU6283_TP_V.jpeg" alt="腹筋"></a>
+        <a href="fukkin.html"><img src="images/PAKU6283_TP_V.jpeg" alt="腹筋"></a>
         <span class="dai">腹筋</span>
       </div>
     </div>
