--- a/kahanshin.html
+++ b/kahanshin.html
@@ -6,8 +6,6 @@
   <title>kahanshin</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="resposive.css">
-  <meta name="viewport"
-  content="width=device-width,initial-scale=1.0">
 </head>
 
 <body>
@@ -70,4 +68,5 @@
       <li><a href="https://www.youtube.com/channel/UCwbuojHcPqeCO9OnGOBEHyw?view_as=subscriber">YouTube</a></li>
     </menu>
   </footer>
+</body>
 </html>
