--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>EnLaCasa</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="/style.css">
   <link rel="stylesheet" href="/resposive.css">
   <script type="text/javascript" src="/ham.js" defer></script>
@@ -14,56 +16,71 @@
 <body>
   <header>
     <!-- サイトタイトルはh1以外を使う -->
-    <div class="header-title"　id="top">En La Casa</div>
+    <div class="header-title" 　id="top">En La Casa</div>
     <!-- h1~h6 は順番に使うべき、大きさ見た目を変えたい場合はclassを使って変える -->
     <!-- 一番伝えたい見出しをh1にする -->
     <h1 class="sub-title">【初心者向け】自宅で楽しく筋トレしましょう！</h1>
-    <menu class="header-list">
-      <li><a href="https://www.myprotein.jp/nutrition.list">Supplement</a></li>
-      <li><a href="https://www.myprotein.jp/nutrition/protein.list">protein</a></li>
-      <li><a href="https://www.youtube.com/channel/UCwbuojHcPqeCO9OnGOBEHyw?view_as=subscriber">youtube</a></li>
-      <li><a href="https://www.instagram.com/mujica8208">Instagram</a></li>
-    </menu>
-    <div class="ham" id="ham">
-      <!-- ハンバーガーボタンのライン -->
-          <span class="ham_line ham_line1"></span>
-          <span class="ham_line ham_line2"></span>
-          <span class="ham_line ham_line3"></span>
-      </div>
-      <!-- メニューの中身 -->
-      <div class="menu_wrapper" id="menu_wrapper">
-          <div class="menu">
-              <ul>
-                  <li><a href="https://www.myprotein.jp/nutrition.list" style="color: #fff;">Supplement</a></li>
-                  <li><a href="https://www.myprotein.jp/nutrition/protein.list" style="color: #fff;">Protein</a></li>
-                  <li><a href="https://www.youtube.com/channel/UCwbuojHcPqeCO9OnGOBEHyw?view_as=subscriber" style="color: #fff;">Youtube</a></li>
-                  <li><a href="https://www.instagram.com/mujica8208" style="color: #fff;">Instagram</a></li>
-              </ul>
-          </div>
-      </div>
+    <span class="top-btn">
+      <button type="button" class="btn btn-outline-primary"><a
+          href="https://www.myprotein.jp/nutrition.list">Supplement</a></button>
+      <button type="button" class="btn btn-outline-primary"><a
+          href="https://www.myprotein.jp/nutrition/protein.list">Proteina</a></button>
+      <button type="button" class="btn btn-outline-primary"><a
+          href="https://www.youtube.com/channel/UCwbuojHcPqeCO9OnGOBEHyw?view_as=subscriber">Youtube</a></button>
+      <button type="button" class="btn btn-outline-primary"><a
+          href="https://www.instagram.com/mujica8208">Instagram</a></button>
+    </span>
   </header>
   <main>
-    <p class="main-text">初心者必見！自宅で簡単に出来る筋トレを紹介します。気になる部位を選んでトレーニングして行きましょう！</p>
-    <div class="shoukaibun">
-      <img src="/images/okinawa.jpeg" alt="管理人">
-      <div class="maeoki">
-        <p>皆さん初めまして(^^)管理人のALEXISです。</p>
-        <p>このページを見てくれてるほとんどの人は
-          最近お腹周りが気になるからではないでしょうか？</p>
-        <p>そうゆ方のために,<span>自宅で簡単に出来る</span>
-          トレーニングを用意しました(^^)</p>
-        <p>下記より一緒に見ていきましょう！</p>
+    <h2 class="main-text">初心者必見！自宅で簡単に出来る筋トレを紹介します。気になる部位を選んでトレーニングして行きましょう！</h2>
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="img" src="/images/okinawa.jpeg" alt="">
+        </div>
+        <div class="carousel-item">
+          <img class="img" src="/images/okinawa.jpeg" alt="">
+        </div>
+        <div class="carousel-item">
+          <img class="img" src="/images/okinawa.jpeg" alt="管理人">
+        </div>
       </div>
+      <a class=" next carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class=" carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class=" sr-only">Previous</span>
+      </a>
+      <a class=" next carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
-    <h2>メニュー</h2>
-    <div class="mokuji">
-      <ul>
-        <li><a href="#merit">筋トレのメリットとは？</a></li>
-        <li><a href="#kisotaisha">基礎代謝をあげよう！</a></li>
-        <li><a href="#shokuji">食事を見直そう！</a></li>
-        <li><a href="#kouka">効果がでるまでどれぐらいかかる？</a></li>
-        <li><a href="#keizoku">継続は力なり！</a></li>
-      </ul>
+    <div class="main-menu">
+      <div class="dropdown">
+        <button class="btn menu-btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+          data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          メニュー
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <a class="dropdown-item" href="#merit">筋トレのメリットとは？</a>
+          <a class="dropdown-item" href="#kisotaisha">基礎代謝をあげよう！</a>
+          <a class="dropdown-item" href="#shokuji">食事を見直そう！</a>
+          <a class="dropdown-item" href="#kouka">効果がでるまでどれぐらいかかる？</a>
+          <a class="dropdown-item" href="#keizoku">継続は力なり！</a>
+        </div>
+      </div>
+      <div class="maeoki">
+        皆さん初めまして(^^)管理人のALEXISです。
+        このページを見てくれてるほとんどの人は
+        最近お腹周りが気になるからではないでしょうか？
+        そうゆ方のために,自宅で簡単に出来る
+        トレーニングを用意しました(^^)
+        下記より一緒に見ていきましょう！
+      </div>
     </div>
     <div class="t-contents">
       <div class="t-item">
@@ -149,5 +166,15 @@
       <li><a href="https://www.instagram.com/mujica8208">Instagram</a></li>
     </menu>
   </footer>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
